# rpi-smars-rover

./: .gitignore  README.md  TODO.md
.kiro/specs/smars-telepresence-rover/: design.md  requirements.md  tasks.md
rover-client/: README.md  package.json
rover-client/src/: index.html
rover-client/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
rover-client/src/css/: styles.css
rover-client/src/js/: app.js  audio_in.js  audio_out.js  motor.js  settings.js  video.js
rover-firmware/: platformio.ini
rover-firmware/src/: main.cpp
rover-server/: README.md  api_routes.py  audio_capture.py  audio_in_namespace.py  audio_out_namespace.py  audio_playback.py  config.py  control_namespace.py  device_detector.py  install.sh  main.py  motor_controller.py  motor_udp.py  requirements.txt  test_api_routes.py  test_audio_capture.py  test_audio_in_namespace.py  test_audio_out_namespace.py  test_audio_playback.py  test_control_namespace.py  test_device_detector.py  test_main_integration.py  test_motor_controller.py  test_video_stream.py  video_namespace.py  video_stream.py
rover-server/wifi_provision/: setup_wifi_provision.sh  wifi_check.sh  wifi_provision.py  wifi_provision.service
